--- a/src/App.scss
+++ b/src/App.scss
@@ -21,6 +21,14 @@
       margin-right: 32px;
       font-size: 24px;
       border-bottom: 4px solid transparent;
+      button{
+        :hover{
+          color: #999999;
+        }
+      }
+      &.selected{
+        border-bottom-color: #ffaa3f;
+      }
     }
   }
   &__content{
