--- a/src/Item.scss
+++ b/src/Item.scss
@@ -1,3 +1,52 @@
 .Item {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
 
+  &__image{
+    width: 64px;
+    height: 64px;
+    border: 1px solid #ccc;
+    margin-right: 10px;
+    float: left;
+  }
+
+  &__title{
+    font-weight: bold;
+    margin-bottom: 0.4em;
+  }
+
+  &__price{
+    text-align: right;
+    font-size: 18px; 
+  }
+
+  &__add-to-cart {
+    margin-bottom: 5px;
+    font-size: 14px;
+    border: 2px solid #FFAA3F;
+    background-color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    &:hover{
+      background-color: #FFDDB2;
+    }
+    &:active{
+      background-color: #ED8400;
+      color: #fff;
+      outline: none;
+    }
+    &:focus{
+      outline: none;
+    }
+  }
+  &__left{
+    flex: 1;
+  }
+  &__right{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
